--- a/Hobbies.html
+++ b/Hobbies.html
@@ -7,7 +7,7 @@
   <body>
     <ul>
       <li>Art and music</li>
-      <li>Creative and social interactions</li>\
+      <li>Creative and social interactions</li>
       <li>Community service</li>
       <li>Sustainability</li>
       <li>Swimming</li>
